# puree

./: .gitignore  Gemfile  Pipfile  README.md  _config.yml  about.html  about.md  detags.csv  history.csv  history.html  index.html  list.html  main.py  next.config.js  package-lock.json  package.json  passworded.xml  practice.html  pyproject.toml  requirements.txt
.github/workflows/: main.yml
_data/: detags.csv  detags.json  detags.xlsx  history.csv  history.json  history.xlsx  practice_detags.csv
_includes/: detags.html  lastupdate.html  navbar.html  practice_detags.html
_includes/icons/: copy.html  download.html  share.html
_layouts/: default.html  markdown.html
_sass/: main.scss
assets/js/: list.js
components/: Layout.tsx  Navbar.tsx  RegionList.tsx
data/: detags.csv  detags.json  detags.xlsx  history.csv  history.json  history.xlsx  practice_detags.csv  practice_detags.json  practice_detags.xlsx
pages/: _app.tsx  about.mdx  history.tsx  index.tsx
public/: detags.json  history.json
