[tool.poetry]
name = "puree"
version = "0.1.0"
description = ""
authors = ["esfalsa <pronoun.nationstates@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
commonmark = "0.9.1"
datetime = "4.5"
et-xmlfile = "1.1.0"
numpy = "1.23.1"
openpyxl = "3.0.10"
pandas = "1.4.3"
pygments = "2.12.0"
python-dateutil = "2.8.2"
pytz = "2022.1"
rich = "12.5.1"
setuptools = "63.4.2"
six = "1.16.0"
zope-interface = "5.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
